# borrg

./: Cargo.toml  LICENSE  readme.md
.github/workflows/: main.yml  release.yml
src/: borrg.rs  lib.rs  main.rs  util.rs
src/backend/: borg.rs  mod.rs
src/borrg/: repo.rs
src/cli/: config.rs  init.rs  mod.rs  run.rs  util.rs
