[package]
name = "borrg"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "3.1", features = ["derive"] }
log = "0.4"
env_logger = "0.9"
chrono = { version = "0.4", optional = true }
toml = "0.5"
dirs = "4.0"
serde_json = "1.0"
indicatif = "0.17.0-rc.10"

[features]
default = ["chrono"]
